Fix status container visibility

--- a/src/scripts/components/toolbar/status-containers/status-container.scss
+++ b/src/scripts/components/toolbar/status-containers/status-container.scss
@@ -10,7 +10,7 @@
     margin-right: 0.5rem;
   }
 
-  .display-none {
+  &.display-none {
     display: none;
   }
 
